@@ -438,8 +438,8 @@ public:
 
   virtual void trace_dump(int type, int amount);
   virtual int trace_dump1(int type, char *buffer, int bufsize);
-  virtual TraceType *getWriteTT();
-  virtual TraceType *getReadTT();
+  virtual unsigned int getWriteTT(unsigned int addr);
+  virtual unsigned int getReadTT(unsigned int addr);
   //
   // Processor Clock control
   //
